# ScintillationModel_RareGasMixtures

./: .gitignore  Outupt_1.5MeV_50.0Vcm.txt  README.md  ReadMD.md  plot_style.py  pyproject.toml  requirements.txt  run_all.sh  run_products.sh
ScintillationModelDani/: ArCF4_Pablo.py  ArCF4_PabloModel.py  Read_Degrad.py  Read_Experimental_Yield.py  Read_Experimental_Yield_NoSistematic.py  ScintillationClass.py  run_all.sh
ScintillationModelDani/cross_section_in_gas/: CMakeLists.txt  ar.txt  cf4.txt  cross_section.cxx  graphic_ar.py  graphic_cf4.py  run_cross_section.py
app/: __init__.py  common.py  context.py  main.py
config/: README.md  channels.csv  experimental_datasets.csv  fits.csv  mixtures.csv  model_requirements.csv  normalizations.csv  ocw.csv  parameter_aliases.csv  population_groups.csv  primary_population_groups.csv  project.toml  secondary_inputs.csv  secondary_parameter_sets.csv  secondary_selections.csv  spectral_components.csv  uncertainty_policies.csv
cross_section/: cross_section.cxx  plot_cross_section.py  run_cross_section.py
cross_sections/: CMakeLists.txt  cross_section.cxx
cumulative_primary_secondary/: cumulative_ArCF4.py
data/: Analysis_experimental.py  Analysis_primary_degrad.py  Analysis_secondary_garfield.py  Analysis_spectra.py  Outupt_1.5MeV_0.0Vcm.txt  _read_experimental.py  read_Root.py  read_experimental.py  read_experimental_ArCF4_IR.py  run_analysis.py
data/Secondary_GarfieldData/printGas/: CMakeLists.txt  printGas.cxx
data/reference/levels/: ArN2_level_data.csv  CMakeLists.txt
docs/: ARCHITECTURE.md  PLOT_RECIPES.md  VALIDATION.md
energy_level_diagram/: README.md  energy_level_diagram.py
integral_comparations/: README.md  run_integral_comparisons.py
models/: Ar2nd_continium.py  ArCF4.py  ArCF4_infrarred.py  ArN2.py
populations_histograms/: run_population_histograms.py
primary_fits/: ArCF4_IR_fit.py  ArCF4_fit.py  ArCF4_fit_sec copy.py  ArCF4_fit_sec.py  ArJoint_IR_fit.py  ArN2_IR_fit.py  ArN2_fit.py  README.md  fiting.py  ploting.py  run_primary_fits.py
primary_fits_table/: Ar_IR.py
primary_predictions/: README.md  configs.py  run_electrons_xray_predictions.py  run_joint_ir_predictions.py  run_primary_ir_low_pressure_predictions.py  run_primary_multiband_predictions.py  run_primary_predictions.py
primary_predictions_joint_ir_fit_patch/: JOINT_IR_README.md
secondary_predictions/: README.md  config_comparation.py  configs.py  run_secondary_predictions.py  run_secondary_uv_vuv_predictions.py  run_uv_vuv_only.py
secondary_threshold/: ArCF4_secondary copy.py  ArCF4_secondary.py
spectra/: README.md  (+5 more)
(+2200 files in other folders)
