[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scintillation-model"
version = "0.4.0"
description = "Config-driven scintillation modelling for rare-gas mixtures"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "scienceplots",
  "dill",
  "uproot",
  "awkward",
  "streamlit>=1.59",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
